# datamate

./: .env.example  .gitignore  AGENT.md  GITHUB_CHECKLIST.md  README.md  RELEASE.md  chat.bat  cleanup.bat  cleanup.sh  cli_conversation.py  config.bat  config.sh  conversation_manager.py  gateway.py  install.bat  install.sh  main.py  memory.py  pyproject.toml  requirements.txt  route.py  sessionmanager.py  token_tracker.py  tool.py  visualization_tool.py
