[project]
name = "agent-100-days-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.6.19",
    "asttokens>=3.0.1",
    "chromadb>=1.5.9",
    "comm>=0.2.3",
    "comma>=0.5.4",
    "dotenv>=0.9.9",
    "fastmcp>=3.4.0",
    "flask>=3.1.3",
    "gradio==6.2.0",
    "langchain==1.2.0",
    "langchain-openai==1.1.6",
    "langfuse>=4.12.0",
    "langgraph>=1.0.10,<1.1.0",
    "langgraph-prebuilt==1.0.8",
    "mcp>=1.28.0",
    "mem0ai[nlp]>=2.0.7",
    "openai>=2.44.0",
    "python-dotenv==1.2.1",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
    "tqdm>=4.68.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
